--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script defer src="/__/firebase/8.1.1/firebase-performance.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
-    <script src="lib/js/index.js"></script>
+    <script defer src="lib/js/index.js"></script>
 
     <h1>Send me a message!</h1>
     <form>
