--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
     <script defer src="lib/js/index.js"></script>
 
     <h1>Send me a message!</h1>
-    <form>
+    <form onsubmit="sendPrint(document.getElementById('text').value)">
       <input type="text" id="text">
-      <input type="submit" onclick="sendPrint(document.getElementById('text').value)">
+      <button onclick="sendPrint(document.getElementById('text').value)">
     </form>
   </body>
 </html>
