That should fix it?? Please...

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <script defer src="lib/js/index.js"></script>
 
     <h1>Send me a message!</h1>
-    <form action="" onsubmit="sendPrint(document.getElementById('text').value)">
-      <input type="text" id="text">
+    <form action="" onsubmit="sendPrint(document.getElementById('requestText').value)" >
+      <input type="text" id="requestText">
       <input type="submit">
     </form>
   </body>
